HEAD
	+ Fixed openLDAP -> samba integration for users, contacts and groups using
	  non ascii characters.
	+ Check for acl and user_xattr mount options when adding system shares
3.2.7
	+ Depend on new samba4 version that fixes 0-byte size problems
	+ NT SD are now written to hidden and readonly files
	+ Remove no longer used antivirus options
	+ Get ldb object in s4sync after the initial wait
	+ Use resolvconf tool to modify resolv.conf when joining as ADC
3.2.6
	+ Set zavsd socket mode to 0777
	+ Fix already defined variable warning
	+ Fixed Samba share ACLs for guest-shares do not contain 'Domain Users'
	  (Contributed by on-jz)
	+ Disable debug to parse ldbsearch command output when looking on idmap.ldb
	+ Set case sensitive on a per share basis
3.2.5
	+ Fix netbios name no being updated when hostname change and samba module
	  is not enabled
	+ Disable debug to parse ldbsearch command output when looking for DNS
	  zones stored in samba
	+ Open files with minimal access mask to set the security descriptors
3.2.4
	+ Fixed Samba share ACLs for 'All users' are not written to filesystem
	+ Listen on all interfaces to avoid problems when more than one IP address
	  is configured in the DNS module
	+ Removed unnecessary FirewallHelper implementation
	+ Delete unused updateHostnameFields() method
	+ Mark network module as changed when upgrading from 3.0
	+ Enforce set of shares ACLs when upgrading from 3.0
3.2.3
	+ Remove old keytab when exporting new one
	+ Add ForestDnsZones and DomainDnsZones partitions DNS records after
	  join domain as additional domain controller
3.2.2
	+ Added retry mechanism in SmbClient to wait until samba is ready
	+ Do not try to get domainSID in s4sync if not ready
	+ Improve retrying log messages in safeConnect
	+ Setup quarantine directory in postHook instead of setConf
	+ Don't use Samba's LDB before it's started
	+ Rewrote a couple of methods to use file access directly instead of LDB
	  so it doesn't depend on the service running